--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "mp-ecommerce-nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "4.17.1",
-    "express-handlebars": "3.1.0",
-    "https": "^1.0.0",
-    "mercadopago": "^1.5.2"
-  }
+    "name": "mp-ecommerce-nodejs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "4.17.1",
+        "express-handlebars": "3.1.0",
+        "https": "^1.0.0",
+        "mercadopago": "^1.5.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
+    }
 }
