--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
         "https": "^1.0.0",
         "mercadopago": "^1.5.2"
     },
-    "devDependencies": {
-        "nodemon": "^2.0.6"
-    }
+    "devDependencies": {}
 }
